--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
 
- body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-  
-  } 
+a {
+  text-decoration: none !important;
+}
+::placeholder {
+  color:#949090
+}
+
