--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,10 @@
+
+
 body {
-  margin: 0;
   font-family: 'Montserrat', sans-serif;
+  min-width: 100%;
+  min-height: 100%;
+  
 }
 
 a {
@@ -10,3 +14,14 @@ a {
   color:#949090
 }
 
+label{
+  padding: 10px;
+  background: red; 
+  display: table;
+  color: #fff;
+   }
+
+input[type="file"] {
+  display: none;
+}
+ 
